--- a/coach.html
+++ b/coach.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Pagina exclusivamente dedicada a ofrecerte los mejores picks para cada parche de LeagueofLegends y abusar en soloQ!">
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Meta abuser</title>
+    <title>Coaching - MetaAbuser</title>
+    <link rel="icon" href="multimedia/logo-meta-abuser-claro.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -80,40 +81,72 @@
 
 <div id="coachMain">
     <img src="multimedia/coach.jpg" width="100%" alt="banner"/>
-    <section id="flechita" >
-    <a class="centrar" href="http://www.guiaplaza.com">
-    <img src="multimedia/flecha-hacia-abajo-para-navegar.png" width="10%" height="10%"/>
-    </a>
-    <section >
     </div> 
 
-  <div class="card-group sinBorde">
+
+<!-- Introducción a la página -->
+<div class="intro container mx-auto w-26 bordeSolido">
+  <div class="texto"> <!--Bloque-->
+    <h1 class="texto__titulo"> ¡Bienvenido a la sección de coaching de Meta Abuser! </h1>
+      <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
+      <P class="texto__texto">Aquí encontrarás los mejores campeones para hacerlo en la cola individual, actualizados parche a parche</P>
+      <p class="texto__texto"></p>
+  </div>
+</div>
+
+<main class="gridContainer  container mx-auto w-26 turboMain">
+  <section class="margencito"><img class="ffl" src="multimedia/c1.png" alt="" height="30%" width="30%"> Aprenda de los entrenadores PRO y de los jugadores de ELO alto para comenzar a llevar sus juegos. Llega al rango que quieras y comienza a escalar rápido. Sin lugar a dudas, corrige tus errores y empieza a jugar a un nivel superior.</section>
+  <section class="margencito ffl"><img class="ffl" src="multimedia/c2.png" alt="" height="30%" width="30%">Obtenga una prueba gratuita de entrenamiento y vea el efecto del entrenamiento en su juego o sesión. Comprenda cómo el entrenamiento de League of Legends puede afectar su juego antes de comprar lecciones.</section>
+  <section class="margencito ffl"><img class="ffl" src="multimedia/c3.png" alt="" height="30%" width="30%">League Coaching te ayuda al permitir que un jugador altamente calificado te brinde sus conocimientos y consejos sobre cómo mejorar. También le permite comprender sus errores y corregirlos en consecuencia. Así es como los jugadores mejoran y escalan más rápido cuando son entrenados.</section>
+  <section class="margencito ffl"> <img class="ffl" src="multimedia/c4.png" alt="" height="30%" width="30%">Pruebe antes de comprar. Básicamente, esto le permite experimentar cómo se siente el coaching antes de obtener su plan de coaching. La prueba debería permitirle sentir los beneficios del entrenamiento de la liga antes de realizar una compra.</section>
+  <section class="margencito ffl"> <img class="ffl" src="multimedia/c5.png" alt="" height="30%" width="30%">Lleva tu sesión de coaching al siguiente nivel. Manténgase actualizado y tenga un horario ordenado para ayudarlo a mejorar de manera constante. Obtenga asistencia y análisis avanzado para sus juegos, comprenda y corrija sus errores con un entrenador en nuestras sesiones premium hoy.</section>
+  <section class="margencito ffl"><img class="ffl" src="multimedia/c6.png" alt="" height="30%" width="30%">Comience con una prueba de reflejos y una medición de la capacidad de atención. Luego, una revisión del juego en vivo. Finalmente, la lección termina con una revisión VOD de ese juego que jugaste. Por lo general, es una hora que es una lección.</section>
+</main>
+
+
+<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div class="texto"> <!--Bloque-->
+    <h2 class="texto__titulo">Metodología de nuestro coaching</h2>
+    <p class="texto__texto">Nos convertimos en los entrenadores personales de cada jugador que lo necesita.
+      Durante el mes o meses (según lo que usted contrate) se asegura su mejora total y el subir de liga si usted sigue nuestras instrucciones.
+      También trabajamos en conjunto con un analista y un psicólogo deportivo a su elección.
+      Son 3 sesiones semanales, en total: 12 al mes.
+      Cada sesión consta de una clase teórica y una clase práctica de aplicación sobre lo aprendido.
+      Se envía material semanal hecho por nuestros entrenadores para asegurar su mejora y el mejor entendimiento de lo que se le quiere enseñar.</p>
+      <br>
+      <p class="texto__texto"></p>
+  </div>
+</div>
+
+
+<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div id="precios" class="card-group sinBorde">
     <div class="card">
-      <img src="multimedia/ashe.jpg" class="card-img-top" alt="...">
+      <img src="multimedia/silver.png" class="card-img-top " alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title colorBlancoT">Plan Primera Sangre: $120</h5>
+        <p class="card-text">1 mes, se asegura diamante 4 o diamante 2.</p>
+        <p class="card-text"><small class="text-muted">Los precios corresponden a dólar estadounidense<p>*Pueden armarse planes personalizados, con valor personalizado</p></small></p>
       </div>
     </div>
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="multimedia/gold.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title colorBlancoT">Plan Exterminio: $200</h5>
+        <p class="card-text"> 2 meses, se asegura master, posible grandmaster.</p>
+        <p class="card-text"><small class="text-muted">Los precios corresponden a dólar estadounidense <p>*Pueden armarse planes personalizados, con valor personalizado</p></small></p>
       </div>
     </div>
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="multimedia/platinum.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title colorBlancoT">Plan Pentakill: $300</h5>
+        <p class="card-text">3 meses, se asegura alcanzar la liga con mayor nivel en el League of Legends.</p>
+        <p class="card-text"><small class="text-muted">Los precios corresponden a dólar estadounidense<p>*Pueden armarse planes personalizados, con valor personalizado</p></small></p>
       </div>
     </div>
   </div>
-
+</div>
 
 
 
@@ -122,61 +155,67 @@
 
 
 <footer> <!--Bloque-->
-    <div class="centrar">
-      <div class="container">
-        <div class="row">
-          <div class="col-4">
-            <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
-            <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
-            <p> Mantenete enterado: <br> 
-              <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
-              <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
-              <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
-            </p>
-            <p><br><br>
-            hecho por ferxdxdddd</p>
-          </div>
-          <div class="col">
-            <h4 class="fTitulos">TOP</h4>
-            <p class="pad20"><a href="#">Inicio </a></p>
-            <p class="pad20"><a href="top.html">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
-          </div>
-          <div class="col">
-            <h4 class="fTitulos">JUNGLA</h4>
-            <p class="pad20"><a href="#">Inicio </a></p>
-            <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
-          </div>
-          <div class="col">
-            <h4 class="fTitulos">MID</h4>
-            <p class="pad20"><a href="#">Inicio </a></p>
-            <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
-          </div>
-          <div class="col">
-            <h4 class="fTitulos">ADC</h4>
-            <p class="pad20"><a href="#">Inicio </a></p>
-            <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
-          </div>
-          <div class="col">
-            <h4 class="fTitulos">SUPPORT</h4>
-            <p class="pad20"><a href="#">Inicio </a></p>
-            <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
-          </div>
-          
+  <div class="centrar">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+          <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
+          <p> Mantenete enterado: <br> 
+            <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
+            <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
+            <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
+          </p>
+          <p class="centrar">
+          <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
         </div>
+        <!-- top -->
+        <div class="col">
+          <h4 class="fTitulos">TOP</h4>
+          <p class="pad20"><a href="#">Inicio </a></p>
+          <p class="pad20"><a href="top.html">Podio </a></p>
+          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+        </div>
+        <!-- jg -->
+        <div class="col">
+          <h4 class="fTitulos">JUNGLA</h4>
+          <p class="pad20"><a href="#">Inicio </a></p>
+          <p class="pad20"><a href="#">Podio </a></p>
+          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+        </div>
+        <!-- mid -->
+        <div class="col">
+          <h4 class="fTitulos">MID</h4>
+          <p class="pad20"><a href="#">Inicio </a></p>
+          <p class="pad20"><a href="#">Podio </a></p>
+          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+        </div>
+        <!-- adc -->
+        <div class="col">
+          <h4 class="fTitulos">ADC</h4>
+          <p class="pad20"><a href="#">Inicio </a></p>
+          <p class="pad20"><a href="#">Podio </a></p>
+          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+        </div>
+        <!-- supp -->
+        <div class="col">
+          <h4 class="fTitulos">SUPPORT</h4>
+          <p class="pad20"><a href="#">Inicio </a></p>
+          <p class="pad20"><a href="#">Podio </a></p>
+          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+        </div>
+        
       </div>
-  </div>
+    </div>
+</div>
 
 </footer>
+
 
 
 
