--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Meta abuser</title>
+    <link rel="icon" href="multimedia/logo-meta-abuser-claro.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -26,7 +27,7 @@
     <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
+          <img class="foto" src="multimedia/LOGO META ABUSER.png"> 
         </a>
     
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -84,7 +85,7 @@
 </div>
 
 <!-- Introducción a la página -->
-<div class="intro container mx-auto w-26 bordeSolido">
+<div class="intro container mx-auto w-26 bordeSolido soloIntro">
   <div class="texto"> <!--Bloque-->
     <h1 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h1>
       <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
@@ -116,7 +117,7 @@
       <p class="texto__texto"> Tomamos la decisión de hacer  dos listas de niveles después de revisar en gran medida que los campeones brindados en una unica no rendia como se esperaba en todas las ligas. Finalmente acordamos que una lista general de niveles dirigida a jugadores platino o superior no serviría a la mayoría de la base de jugadores y nos propusimos hacer una Tier list general, y una Tier list para jugadores de High Elo
       <p class="botones "><a href="#general" class="btn btn-primary btn-lg botones " tabindex="-1" role="button" aria-disabled="true">Tier list General</a>
       <a href="#HighElo" class="btn btn-primary btn-lg botones " tabindex="-1" role="button" aria-disabled="true">Tier list High Elo</a></p>
-      <p class="texto__texto">A continuacion el resumen del parche</p>
+      <p class="texto__texto">A continuacion el resumen del parche:</p>
   </div>
 </div>
 
@@ -168,8 +169,8 @@
               <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
               <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
             </p>
-            <p><br><br>
-            hecho por ferxdxdddd</p>
+            <p class="centrar">
+            <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
           </div>
           <!-- top -->
           <div class="col">
