--- a/mid.html
+++ b/mid.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks midlane campeones-rotos-mid que-juego-mid mejor-mid guia-mid aprender-mid como-carrear-como-mid faker-builds">
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mid meta</title>
+    <title>Mid - MetaAbuser</title>
+    <link rel="icon" href="multimedia/logo-meta-abuser-claro.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,10 +24,11 @@
 <body>
 <header> <!--NAVBAR-->
     <!-- NAVBAR -->
+    <!-- NAVBAR -->
     <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
+          <img class="foto" src="multimedia/LOGO META ABUSER.png"> 
         </a>
     
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -69,8 +71,8 @@
           </div>
 
           <div class="navbar-start">
-            <a href="index.html" class="navbar-item grisesito">
-              Guias
+            <a href="coach.html" class="navbar-item grisesito">
+              Coaching
             </a>
             </div>
         </div>
@@ -158,9 +160,10 @@
               <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
               <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
             </p>
-            <p><br><br>
-            hecho por ferxdxdddd</p>
+            <p class="centrar">
+            <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
           </div>
+          <!-- top -->
           <div class="col">
             <h4 class="fTitulos">TOP</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -168,6 +171,7 @@
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
+          <!-- jg -->
           <div class="col">
             <h4 class="fTitulos">JUNGLA</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -175,6 +179,7 @@
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
+          <!-- mid -->
           <div class="col">
             <h4 class="fTitulos">MID</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -182,6 +187,7 @@
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
+          <!-- adc -->
           <div class="col">
             <h4 class="fTitulos">ADC</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -189,6 +195,7 @@
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
+          <!-- supp -->
           <div class="col">
             <h4 class="fTitulos">SUPPORT</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -200,8 +207,8 @@
         </div>
       </div>
   </div>
-
 </footer>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
