--- a/supp.html
+++ b/supp.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks supplane campeones-rotos-supp que-juego-supp mejor-supp guia-top aprender-supp como-carrear-como-supp wards estrategiaLol controldemapa">
+    <meta name="description" content="Pagina exclusivamente dedicada a ofrecerte los mejores picks para cada parche de LeagueofLegends y abusar en soloQ!">
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Supp meta</title>
+    <title>Meta abuser</title>
+    <link rel="icon" href="multimedia/logo-meta-abuser-claro.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,14 +21,13 @@
     <link rel="stylesheet" href="estilo.scss">
     <link rel="stylesheet" href="estilos.css">
 </head>
-<body>
-  <header class="header">
-    <img class="nav_logo" src='https://i.imgur.com/E3fhL5K.png' alt="logo">
+<body class="">
+  <header>
     <!-- NAVBAR -->
     <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
+          <img class="foto" src="multimedia/LOGO META ABUSER.png"> 
         </a>
     
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -70,14 +70,14 @@
           </div>
 
           <div class="navbar-start">
-            <a href="index.html" class="navbar-item grisesito">
+            <a href="coach.html" class="navbar-item grisesito">
               Coaching
             </a>
             </div>
         </div>
       </div>
     </nav>
-  </header>
+</header>
 
 
   <div class="">
@@ -138,9 +138,19 @@
     </div>
   </div>
 
-  <p class="experto pad20 centrar">
-        <iframe width="50%" height="540" src="https://www.youtube.com/watch?v=eAophU1skL0 zoom" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
+  <p class="experto pad20 centrar margenBot">
+    <iframe width="50%" height="540" src="https://www.youtube.com/embed/MLEHkjc89V8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
       </p>
+
+      <main class="gridContainer  container mx-auto w-26 turboMain margenBot">
+        <h2 class="tituloCounters centrado">Tiradores <span class="verde">fuertes</span> y <span class="rojo">débiles</span> con Lulu aliada</h2>
+        <section class="margencito"><img class="ffl bordeVerde" src="multimedia/kogmaw.jpg" alt="" height="100%" width="100%"><p class="centrado"></p>         </section>
+        <section class="margencito ffl"><img class="ffl bordeVerde" src="multimedia/vayne.jpg" alt="" height="100%" width="100%"><p class="centrado"></p>        </section>
+        <section class="margencito ffl"><img class="ffl bordeVerde" src="multimedia/jinx.jpg" alt="" height="100%" width="100%"><p class="centrado">increible combo</p></section>
+        <section class="margencito ffl"> <img class="ffl bordeRojo" src="multimedia/kalista.jpg" alt="" height="100%" width="100%"><p class="centrado"></p>        </section>
+        <section class="margencito ffl"> <img class="ffl bordeRojo" src="multimedia/sivir.jpg" alt="" height="100%" width="310%"><p class="centrado"></p>        </section>
+        <section class="margencito ffl"><img class="ffl bordeRojo" src="multimedia/ashe.jpg" alt="" height="100%" width="100%"><p class="centrado"></p>        </section>
+      </main>
 
       <footer> <!--Bloque-->
         <div class="centrar">
@@ -154,9 +164,10 @@
                   <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
                   <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
                 </p>
-                <p><br><br>
-                hecho por ferxdxdddd</p>
+                <p class="centrar">
+                <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
               </div>
+              <!-- top -->
               <div class="col">
                 <h4 class="fTitulos">TOP</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
@@ -164,6 +175,7 @@
                 <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
                 <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
               </div>
+              <!-- jg -->
               <div class="col">
                 <h4 class="fTitulos">JUNGLA</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
@@ -171,6 +183,7 @@
                 <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
                 <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
               </div>
+              <!-- mid -->
               <div class="col">
                 <h4 class="fTitulos">MID</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
@@ -178,6 +191,7 @@
                 <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
                 <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
               </div>
+              <!-- adc -->
               <div class="col">
                 <h4 class="fTitulos">ADC</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
@@ -185,6 +199,7 @@
                 <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
                 <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
               </div>
+              <!-- supp -->
               <div class="col">
                 <h4 class="fTitulos">SUPPORT</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
