--- a/bot.html
+++ b/bot.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks adclane campeones-rotos-adc que-juego-adc mejor-adc guia-adc aprender-adc como-carrear-como-adc gosu rekkles">
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ADC meta</title>
+    <title>ADC - MetaAbuser</title>
+    <link rel="icon" href="multimedia/logo-meta-abuser-claro.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -22,10 +23,11 @@
 </head>
 <body>
     <!-- NAVBAR -->
+    <!-- NAVBAR -->
     <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
+          <img class="foto" src="multimedia/LOGO META ABUSER.png"> 
         </a>
     
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -68,8 +70,8 @@
           </div>
 
           <div class="navbar-start">
-            <a href="index.html" class="navbar-item grisesito">
-              Guias
+            <a href="coach.html" class="navbar-item grisesito">
+              Coaching
             </a>
             </div>
         </div>
@@ -127,7 +129,7 @@
       <div class="texto"> <!--Bloque-->
         <h3 class="texto__titulo">Campeón destacado: Ashe</h3>
           <ul class="texto__texto">
-            <li>Kog'maw tiene algunos aficionados menores en este parche, pero la verdadera influencia para el punto culminante es su sinergia con Lulu, que la vuelve extremadamente fuerte.</li>
+            <li>Ashe tiene algunos aficionados menores en este parche, pero la verdadera influencia para el punto culminante es su sinergia con Lulu, que la vuelve extremadamente fuerte.</li>
             <li>Este dúo bot ha sido muy a menudo súper difícil de tratar, con un combo de muchísimo daño y supervivencia. Ideal para jugar con un amigo y dominar las partidas en el juego tardío.</li>
           </ul>
       </div>
